# gen_fwc26

./: .env.example  .gitignore  README.md  pyproject.toml
contracts/: fantasy_world_cup.py  fantasy_world_cup_studio.py
data/: fixtures_2026.json  players_2026.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx  wagmi.config.ts
frontend/src/components/: BudgetBar.tsx  ChipCard.tsx  CountdownTimer.tsx  LeagueTable.tsx  Navbar.tsx  PitchView.tsx  PlayerCard.tsx  PointsBreakdown.tsx  TransferPanel.tsx  WalletConnect.tsx
frontend/src/hooks/: useGameweek.ts  useLeaderboard.ts  useMatchResult.ts  useMyTeam.ts  usePlayers.ts  usePrizePool.ts
frontend/src/lib/: constants.ts  genlayer.ts  logger.ts  scoring.ts
frontend/src/pages/: Chips.tsx  Fixtures.tsx  Home.tsx  Leaderboard.tsx  MatchDetail.tsx  Profile.tsx  Squad.tsx  Transfers.tsx
frontend/src/store/: squadStore.ts  uiStore.ts
scripts/: deploy.py  seed_gameweek_matches.py  seed_players.py  settle_gameweek.py
sdk/: __init__.py  client.py  types.py  utils.py
tests/: conftest.py  test_awards.py  test_chips.py  test_leaderboard.py  test_match_settlement.py  test_squad_management.py
