[project]
name = "fwc-genlayer"
version = "0.1.0"
description = "Fantasy World Cup on GenLayer Studionet"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["sdk", "scripts"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]
scripts = ["python-dotenv>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
